@@ -474,6 +474,9 @@ if (NOT WIN32)
         if (LAME_FOUND)
             TARGET_LINK_LIBRARIES(cantata ${LAME_LIBS})
             include_directories(${LAME_INCLUDE_DIR})
+            if (ENABLE_KDE_SUPPORT)
+                install(FILES cantata-play-audiocd.desktop DESTINATION ${DATA_INSTALL_DIR}/solid/actions)
+            endif (ENABLE_KDE_SUPPORT)
         endif (LAME_FOUND)
     endif (CDDB_FOUND OR MUSICBRAINZ5_FOUND)
 endif (NOT WIN32)
